--- a/PwaPo/src/components/app-title/app-title.scss
+++ b/PwaPo/src/components/app-title/app-title.scss
@@ -1,20 +1,42 @@
 app-title {
 
-
-  ion-toolbar{
-   --ion-color-primary: linear-gradient(60deg, var(--app-secondary-color), var(--app-third-color));
+  text-align: center;
+position: relative;
+  max-height: 10px;
+  --pading-bottom: 0px;
+  
+  ion-toolbar {
+    --ion-color-primary: linear-gradient(60deg, var(--app-secondary-color), var(--app-third-color));
+    display : flex;
   }
 
+  .imgToolBar {
+    display: inline-block;
+    vertical-align: middle;
+    width: fit-content;
+    max-height: 2rem;
+    height: 44px;
+    display: flex;
+    vertical-align: center;
+  }
 
-   .imgToolBar {
-       vertical-align: middle;
-       width: 20%;
-       max-height: 2rem;
-       height: 44px;
-       display : flex;
-   }
+  ion-title{
+    display: inline-block;
+    vertical-align: center;
+    text-align: center;
+    font-weight: 700;
+    width: fit-content;
+    display : flex;
+    -webkit-box-align: center;
+    -webkit-box-flex: 1;
+    align-items: center;
+    transform: translateZ(0);
+  }
 
-   
-   
- }
- 
+  ion-contact{
+    vertical-align: center;
+  }
+
+}
+
+
