design de l'app-presentation : amélioration

--- a/PwaPo/src/components/app-presentation/app-presentation.scss
+++ b/PwaPo/src/components/app-presentation/app-presentation.scss
@@ -26,5 +26,9 @@ app-presentation {
     .colored-text {
       color: var(--app-primary-color);
     }
+
+    .swiper-slide{
+     max-height: 90% !important;
+    }
   }
   
