--- a/PwaPo/src/components/app-project-infos/app-project-infos.scss
+++ b/PwaPo/src/components/app-project-infos/app-project-infos.scss
@@ -1,17 +1,28 @@
 
-ion-slide{
-    display : block !important;
-    height: 50% !important;
-    width: 40% !important;
-    padding: 0px 0px 20px 0px;
-    line-height: 1.5;
-    margin: 10px 105px;
+app-project-infos{
+    ion-slide{
+        display : block !important;
+        height: 50% !important;
+        width: 40% !important;
+        padding: 0px 0px 20px 0px;
+        line-height: 1.5;
+        margin: 10px 105px;
+    }
+    
+    
+    .underline{
+        text-decoration: underline;
+    }
+    
+    ion-card-content{
+        padding: 70px;
+        line-height: 200px;
+        height: 200px;
+        text-align: center;
+    
+    }
+    
+
+
 }
 
-ion-card-content{
-    padding: 70px;
-    line-height: 200px;
-    height: 200px;
-    text-align: center;
-
-}
