--- a/PwaPo/src/components/app-photo/app-photo.scss
+++ b/PwaPo/src/components/app-photo/app-photo.scss
@@ -1,22 +1,40 @@
 app-photo {
+
+  .swiper-slide {
+    img {
+      width: auto;
+      max-width: 100%;
+      height: auto;
+      max-height: -webkit-fill-available !important;
+      padding-right: 10px;
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+      display:-webkit-inline-flex;
+      vertical-align: middle;
+       text-align: center;
+    }
+  }
+
     .scroll-inner {
       height: 100%;
       ion-slides {
         height: 100%;
+
         .swiper-container {
           height: 100%;
           ion-slide {
             background-color: var(--app-primary-color);
           }
+
           .lazy-img-photo {
             height: 100%;
             display:flex;
-            img {
-              align-self: center;
-              background-size: contain;
-              background-repeat: no-repeat;
-            }
+            text-align: center;
+            max-height: fit-content;
+            
           }
+          
           .download-link {
             position: absolute;
             top: 20px;
