Custom app-project-infos

--- a/PwaPo/src/components/app-photo/app-photo.scss
+++ b/PwaPo/src/components/app-photo/app-photo.scss
@@ -22,7 +22,7 @@ app-photo {
             top: 20px;
             right: 20px;
             img {
-              max-height: 30px;
+              max-height: auto;
             }
           }
         }
