suppression fond bleu boutons app-projets-infos et centrer image verticalement dans app-galery

--- a/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
+++ b/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
@@ -53,6 +53,11 @@ app-projects-gallery{
             }
         }
     }
+
+    ion-button{
+            --background: none;     
+    }
+    
 }
 
 
