--- a/PwaPo/src/components/app-photo/app-photo.scss
+++ b/PwaPo/src/components/app-photo/app-photo.scss
@@ -6,13 +6,10 @@ app-photo {
       max-width: 100%;
       height: auto;
       max-height: -webkit-fill-available !important;
-      padding-right: 10px;
-      padding-top: 10px;
-      padding-left: 10px;
-      padding-bottom: 10px;
-      display:-webkit-inline-flex;
-      vertical-align: middle;
-       text-align: center;
+      padding-right: 0.5rem;
+      padding-top:  0.5rem;
+      padding-left:  0.5rem;
+      padding-bottom:  0.1rem;
     }
   }
 
@@ -46,5 +43,10 @@ app-photo {
         }
       }
     }
+
+    ion-slides{
+      display:contents;
+    }
+    
   }
   
