Suppression du --background-activated : blue lors de l'appui sur les boutons

--- a/PwaPo/src/components/app-footer/app-footer.scss
+++ b/PwaPo/src/components/app-footer/app-footer.scss
@@ -1,5 +1,14 @@
 
 app-footer {
+
+    ion-footer{
+      ion-button{
+        --background-activated : none;
+      }
+    }
+
+
+
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -21,10 +30,10 @@ app-footer {
       -webkit-font-smoothing: antialiased;
       --box-shadow : none;
     }
-
   }
-  
 
   ion-toolbar{
     --ion-color-primary: ;
+    
   }
+
