--- a/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
+++ b/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
@@ -21,6 +21,20 @@
 
 app-projects-gallery{
 
+    ion-page{
+        ion-content{
+            ion-grid{
+                ion-row{
+                    ion-col{
+                        ion-button{
+                            --background-activated: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .button-solid{
         --ion-color-base: none;
         --height: ;
