--- a/PwaPo/src/components/app-photo/app-photo.scss
+++ b/PwaPo/src/components/app-photo/app-photo.scss
@@ -1,7 +1,12 @@
 app-photo {
 
+
+  transition-duration: 30ms !important;
+  
+
   .swiper-slide {
     img {
+      
       width: auto;
       max-width: 100%;
       height: auto;
@@ -10,6 +15,7 @@ app-photo {
       padding-top:  0.5rem;
       padding-left:  0.5rem;
       padding-bottom:  0.1rem;
+
     }
   }
 
