--- a/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
+++ b/PwaPo/src/components/app-projects-gallery/app-projects-gallery.scss
@@ -21,6 +21,8 @@
 
 app-projects-gallery{
 
+    transition-duration: 30ms !important;
+
     ion-page{
         ion-content{
             ion-grid{
