--- a/PwaPo/src/components/app-footer/app-footer.scss
+++ b/PwaPo/src/components/app-footer/app-footer.scss
@@ -1,25 +1,29 @@
 
 app-footer {
 
+  background-image: -moz-linear-gradient(30deg, var(--app-third-color), var(--app-secondary-color));
+  background-image: -webkit-linear-gradient(30deg,  var(--app-third-color), var(--app-secondary-color));
+  background-image: -o-linear-gradient(30deg, var(--app-third-color), var(--app-secondary-color));
+  background-image: linear-gradient(60deg, var(--app-third-color), var(--app-secondary-color));
+
     ion-footer{
+      height :3rem;
       ion-button{
         --background-activated : none;
-
-
       }
+
+      ion-tabs{
+          --ion-tabbar-background-color: linear-gradient(60deg, var(--app-third-color), var(--app-secondary-color));
+          --color : white;
+          --color-selected: black;
+      }
+  
     }
-
-
 
     position: absolute;
     bottom: 0;
     width: 100%;
   
-    background-image: -moz-linear-gradient(30deg, var(--app-third-color), var(--app-secondary-color));
-    background-image: -webkit-linear-gradient(30deg,  var(--app-third-color), var(--app-secondary-color));
-    background-image: -o-linear-gradient(30deg, var(--app-third-color), var(--app-secondary-color));
-    background-image: linear-gradient(60deg, var(--app-third-color), var(--app-secondary-color));
-    
     ion-button{
       height: 3rem;
       width: 25%;
@@ -34,8 +38,5 @@ app-footer {
     }
   }
 
-  ion-toolbar{
-    --ion-color-primary: ;
-    
-  }
+ 
 
