--- a/PwaPo/src/components/app-project-infos/app-project-infos.scss
+++ b/PwaPo/src/components/app-project-infos/app-project-infos.scss
@@ -1,6 +1,10 @@
 
 app-project-infos{
 
+
+    transition-duration: 5ms !important;
+
+    
     .div-parent{
         display: flex;
         flex-direction: column;
