essai de custom du app-title

--- a/PwaPo/src/components/app-title/app-title.scss
+++ b/PwaPo/src/components/app-title/app-title.scss
@@ -30,10 +30,11 @@ app-title {
   }
 
   ion-title{
+    font-family: 'Open Sans', sans-serif;
     padding-top : 6px;
     display: inline-block;
     text-align: center;
-    font-weight: 700;
+    font-weight: 900;
     width: fit-content;
     display : flex;
     -webkit-box-align: center;
